[fix] 필요 없는 부분 삭제 및 수정

--- a/src/main/webapp/resources/css2/screens/user/join.css
+++ b/src/main/webapp/resources/css2/screens/user/join.css
@@ -213,7 +213,7 @@ screens-user-join_h5 {
 
 /*회원가입버튼*/
 #screens-user-join_signup_btn {
-  width: 100px;
+  width: 100%;
   height: 100%;
   background-color: #F48475;
   border: none;
