--- a/src/main/webapp/resources/css2/screens/room/roomDetail.css
+++ b/src/main/webapp/resources/css2/screens/room/roomDetail.css
@@ -521,7 +521,7 @@
 
 .screens-room-roomDetail__reservation__btn {
   width: 100%;
-  background: #FF365A;
+  background: #F6872D;
   color: #FFFFFF;
   padding: 15px;
   border-radius: 8px;
