--- a/src/main/webapp/resources/css2/screens/user/join.css
+++ b/src/main/webapp/resources/css2/screens/user/join.css
@@ -64,7 +64,7 @@ screens-user-join_h5 {
   border-radius: 5px;
   font-size: 16px;
   color: #333;
-  border: 1px solid #F48475;
+  border: 1px solid #F6872D;
   margin-top: 10px;
 
 }
@@ -108,7 +108,7 @@ screens-user-join_h5 {
   position: relative;
   width: 100%;
   height: 51px;
-  border: solid 1px #F48475;
+  border: solid 1px #F6872D;
   padding: 10px;
   background: #fff;
   box-sizing: border-box;
@@ -158,7 +158,7 @@ screens-user-join_h5 {
   left: 0;
   cursor: pointer;
   background: #fff;
-  border: 1px solid #F48475;
+  border: 1px solid #F6872D;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
   padding: 10px 20px;
 }
@@ -187,7 +187,7 @@ screens-user-join_h5 {
 }
 
 .screens-user-join_dropdown .screens-user-join_dropdown__option div:hover {
-  background: #F48475;
+  background: #F6872D;
   color: #fff;
 }
 
@@ -205,7 +205,7 @@ screens-user-join_h5 {
   line-height: 55px;
   margin: 10px 0px 50px 0px;
   border: solid 1px rgba(0, 0, 0, .1);
-  background-color: #F48475;
+  background-color: #F6872D;
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
@@ -215,7 +215,7 @@ screens-user-join_h5 {
 #screens-user-join_signup_btn {
   width: 100%;
   height: 100%;
-  background-color: #F48475;
+  background-color: #F6872D;
   border: none;
   color: #fff;
   font-size: 18px;
@@ -231,7 +231,7 @@ screens-user-join_h5 {
   line-height: 55px;
   margin: 10px 0px 0px 10px;
   border: solid 1px rgba(0, 0, 0, .1);
-  background-color: #F48475;
+  background-color: #F6872D;
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
@@ -242,7 +242,7 @@ screens-user-join_h5 {
   line-height: 55px;
   margin: 10px 0px 0px 10px;
   border: solid 1px rgba(0, 0, 0, .1);
-  background-color: #F48475;
+  background-color: #F6872D;
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
@@ -252,7 +252,7 @@ screens-user-join_h5 {
 #screens-user-join_mail_Check_Btn, #screens-user-join_address_Check_Btn, #screens-user-join_mail_code_check_Btn {
   width: 115px;
   height: 100%;
-  background-color: #F48475;
+  background-color: #F6872D;
   border: none;
   color: #fff;
   font-size: 15px;
@@ -265,7 +265,7 @@ screens-user-join_h5 {
 #screens-user-join_id_Check_Btn {
   width: 115px;
   height: 100%;
-  background-color: #F48475;
+  background-color: #F6872D;
   border: none;
   color: #fff;
   font-size: 15px;
