--- a/src/main/webapp/resources/css2/screens/user/login.css
+++ b/src/main/webapp/resources/css2/screens/user/login.css
@@ -31,7 +31,7 @@ screens-user-login__container__inner {
   background: transparent;
   background: #fff;
   /* wrapper 아래 모든 폰트 컬러 */
-  color: #F48475;
+  color: #F6872D;
   border-radius: 10px;
   padding: 30px 40px;
 }
@@ -54,7 +54,7 @@ screens-user-login__container__inner {
   background: transparent;
   border: none;
   outline: none;
-  border: 1px solid #F48475;
+  border: 1px solid #F6872D;
   border-radius: 5px;
   font-size: 13px;
   padding: 20px 45px 20px 50px;
@@ -85,7 +85,7 @@ screens-user-login__container__inner {
   cursor: pointer;
   font-size: 16px;
   font-weight: 600;
-  background: #F48475;
+  background: #F6872D;
 }
 
 .screens-user-login__main-login__btn {
@@ -98,7 +98,7 @@ screens-user-login__container__inner {
 }
 
 .screens-user-login__label .screens-user-login__login-wrapper__checkbox {
-  accent-color: #F48475;
+  accent-color: #F6872D;
   margin-right: 3px;
 }
 
