--- a/src/main/webapp/resources/css2/screens/user/myCoupon.css
+++ b/src/main/webapp/resources/css2/screens/user/myCoupon.css
@@ -36,7 +36,7 @@
     width: 270px;
     height: 90px;
     background-color: white;
-    border: 2px solid #F48475;
+    border: 2px solid #F6872D;
     border-radius: 8px;
     float: left;
     padding: 10px 0 10px 10px;
@@ -62,7 +62,7 @@
     position: absolute;
     top: 0;
     right: 10px;
-    background-color: #F48475;
+    background-color: #F6872D;
     border-bottom-right-radius: 2px;
     border-bottom-left-radius: 2px;
 }
@@ -83,7 +83,7 @@
 .screens-user-myCoupon_list__wrapper__discount {
     font-size: 30px;
     font-weight: 800;
-    color: #F48475;
+    color: #F6872D;
     position: absolute;
     right: 10px;
     bottom: 35px;
