--- a/src/main/webapp/resources/css2/components/user/header.css
+++ b/src/main/webapp/resources/css2/components/user/header.css
@@ -1,3 +1,8 @@
+.headerBanner {
+    width: 100%;
+    height: 80px;
+    background-color: #eeeeee;
+}
 
 .components-user-header__header {
   position: relative;
